fixed final project spacing

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -86,6 +86,10 @@
   }
 }
 
+#lastProject {
+  margin-bottom: 200px;
+}
+
 .projectReverse {
   @media (max-width: 885px) {
     flex-direction: column-reverse;
